fixed spacing on some sizes

--- a/index.css
+++ b/index.css
@@ -93,7 +93,7 @@ html {
 
   .sale-price {
     color: hsl(158, 36%, 37%);
-    font-size: 2em;
+    font-size: 2.1em;
     font-family: "Fraunces", serif;
     margin: 0;
     /* border: 2px solid red; */
